--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMRhyBgP_ocyjOfjVc_UZ-ylHFppc1HxU&libraries=places&callback=initMap"></script>
+    <!-- <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMRhyBgP_ocyjOfjVc_UZ-ylHFppc1HxU&libraries=places&callback=initMap"></script> -->
   
   </body>
 </html>
